--- a/app/src/main/res/layout/fragment_country.xml
+++ b/app/src/main/res/layout/fragment_country.xml
@@ -2,6 +2,12 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+        <variable
+            name="selectedCountry"
+            type="com.example.kotlincountries4.model.Country" />
+    </data>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -15,7 +21,7 @@
             android:layout_marginTop="10dp"
             android:minHeight="200dp"
             android:scaleType="fitCenter"
-            android:src="@drawable/ic_launcher_foreground" />
+            android:downloadUrl="@{selectedCountry.imageUrl}"/>
 
         <TextView
             android:id="@+id/countryName"
@@ -24,7 +30,7 @@
             android:layout_below="@id/countryImage"
             android:layout_centerHorizontal="true"
             android:padding="7dp"
-            android:text="Name"
+            android:text="@{selectedCountry.countryName}"
             android:textColor="@color/black"
             android:textSize="20sp"
             android:textStyle="bold" />
@@ -36,7 +42,7 @@
             android:layout_below="@id/countryName"
             android:layout_centerHorizontal="true"
             android:padding="7dp"
-            android:text="Capital"
+            android:text="@{selectedCountry.countryCapital}"
             android:textSize="16sp" />
 
         <TextView
@@ -46,7 +52,7 @@
             android:layout_below="@id/countryCapital"
             android:layout_centerHorizontal="true"
             android:padding="7dp"
-            android:text="Region"
+            android:text="@{selectedCountry.countryRegion}"
             android:textSize="16sp" />
 
         <TextView
@@ -56,7 +62,7 @@
             android:layout_below="@id/countryRegion"
             android:layout_centerHorizontal="true"
             android:padding="7dp"
-            android:text="Currency"
+            android:text="@{selectedCountry.countryCurrency}"
             android:textSize="16sp" />
 
         <TextView
@@ -66,7 +72,7 @@
             android:layout_below="@id/countryCurrency"
             android:layout_centerHorizontal="true"
             android:padding="7dp"
-            android:text="Language"
+            android:text="@{selectedCountry.countryLanguage}"
             android:textSize="16sp" />
 
     </RelativeLayout>
