--- a/app/src/main/res/layout/item_country.xml
+++ b/app/src/main/res/layout/item_country.xml
@@ -1,17 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <data>
+
+        <variable
+            name="country"
+            type="com.example.kotlincountries4.model.Country" />
+
+        <variable
+            name="listener"
+            type="com.example.kotlincountries4.adapter.CountryClickListener" />
+    </data>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="150dp"
+        android:onClick="@{listener::onCountryClicked}"
         android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/countryUuidText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:text="@{String.valueOf(country.uuid)}"/>
 
         <ImageView
             android:id="@+id/imageView"
-            android:src="@drawable/ic_launcher_foreground"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="2"
+            android:downloadUrl="@{country.imageUrl}"
             android:padding="3dp" />
 
         <LinearLayout
@@ -26,7 +45,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="5dp"
-                android:text="name"
+                android:text="@{country.countryName}"
                 android:textColor="@color/black"
                 android:textSize="25sp"
                 android:textStyle="bold" />
@@ -36,7 +55,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="5dp"
-                android:text="region"
+                android:text="@{country.countryRegion}"
                 android:textSize="16sp" />
         </LinearLayout>
 
